# GCIDsc

./: Makefile  README.md  gwsdsc-architecture.html  implementation-azure-devops.md  implementation-google-cloud.md  pyproject.toml
config/: resources.yaml.example  tenant.yaml.example
docs/: api-gap-analysis.md  authentication.md  extending-resources.md  implementation-azure-devops.md  implementation-google-cloud.md
pipelines/azure-devops/: README.md  azure-pipelines.yml
pipelines/google-cloud/: README.md  cloudbuild-apply.yaml  cloudbuild-export.yaml
pipelines/google-cloud/terraform/: main.tf  outputs.tf  variables.tf
src/gwsdsc/: __init__.py  auth.py  cli.py  config.py  secrets.py
src/gwsdsc/engine/: __init__.py  diff_engine.py  export_engine.py  import_engine.py  report_engine.py
src/gwsdsc/resources/: __init__.py  admin_settings_legacy.py  alert_center.py  app_access.py  base.py  calendar_resources.py  chrome_browsers.py  chrome_policies.py  chrome_printers.py  chromeos_telemetry.py  ci_devices.py  ci_groups.py  ci_oidc_sso_profiles.py  ci_policies.py  ci_saml_sso_profiles.py  ci_sso_assignments.py  ci_user_invitations.py  contact_delegation.py  context_aware_access.py  customer.py  data_transfers.py  domains.py  email_settings.py  group_members.py  groups.py  license_assignments.py  mobile_devices.py  org_units.py  role_assignments.py  roles.py  schemas.py  security.py  users.py  vault_retention.py
src/gwsdsc/store/: __init__.py  base.py  gcs_store.py  git_store.py
tests/: conftest.py  test_diff_engine.py  test_resources.py  test_secrets.py
